[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdkeychunker"
version = "0.1.0"
description = "Markdown-only document chunking with metadata enrichment for RAG pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "MDKeyChunker Team"}
]
keywords = ["markdown", "chunking", "rag", "nlp", "entity-extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "mistune>=3.0.0",  # Fast, spec-compliant Markdown parser
    "spacy>=3.7.0",
    "rake-nltk>=1.0.6",  # Lightweight keyword extraction
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",  # For cosine similarity
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
mdkeychunker = "mdkeychunker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdkeychunker*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=mdkeychunker --cov-report=term-missing"
