[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdkeychunker"
version = "0.2.0"
description = "Markdown chunking with LLM enrichment for RAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MDKeyChunker Team"}
]
keywords = ["markdown", "chunking", "rag", "llm", "retrieval-augmented-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",        # Works with OpenAI, Ollama, vLLM, LM Studio, etc.
    "anthropic>=0.18.0",    # Native Anthropic support
    "python-dotenv>=1.0.0", # .env config
    "tiktoken>=0.5.0",      # Token counting
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
mdkeychunker = "mdkeychunker.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/MDKeyChunker"
Repository = "https://github.com/yourusername/MDKeyChunker"
Issues = "https://github.com/yourusername/MDKeyChunker/issues"
Changelog = "https://github.com/yourusername/MDKeyChunker/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdkeychunker*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
